RESOLVED FIXED138838
DOMTimers sometimes don't get unthrottled on scrolling
https://bugs.webkit.org/show_bug.cgi?id=138838
Summary DOMTimers sometimes don't get unthrottled on scrolling
Chris Dumez
Reported 2014-11-18 11:29:14 PST
DOMTimers sometimes don't get unthrottled on scrolling. This is because we stop listening for viewport changes every time the timer fires, but we don't listen for those changes again if we decide the timer should stay throttled after the timer's action was executed. We should listen for viewport changes again after executing the action, if there are elements outside the viewport causing the DOMTimer to be throttled, even if the throttleState hasn't changed.
Attachments
Patch (8.28 KB, patch)
2014-11-18 12:12 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2014-11-18 12:12:21 PST
Chris Dumez
Comment 2 2014-11-18 13:27:40 PST
Comment on attachment 241801 [details] Patch Thanks for reviewing quickly.
WebKit Commit Bot
Comment 3 2014-11-18 14:05:02 PST
Comment on attachment 241801 [details] Patch Clearing flags on attachment: 241801 Committed r176282: <http://trac.webkit.org/changeset/176282>
WebKit Commit Bot
Comment 4 2014-11-18 14:05:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.